project/force-app/main/default/objects/Sales_Advertising_Target__c/Sales_Advertising_Target__c.object-meta.xml
<CustomObject>
    <label>Sales Advertising Target</label>
    <pluralLabel>Sales Advertising Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Sales Advertising Target Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>