project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Actual_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Actual_Impressions__c</fullName>
    <label>Actual Impressions</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>