project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipName>Sales_Ad_Target_BizEntities</relationshipName>
</CustomField>