project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Completion_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Completion_Rate_Type__c</fullName>
    <label>Completion Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Accumulated Month</fullName>
            </value>
            <value>
                <fullName>Accumulated Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>