project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Conversions__c.field-meta.xml
<CustomField>
    <fullName>Conversions__c</fullName>
    <label>Conversions</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>