project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Revenue_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Achievement__c</fullName>
    <label>Revenue Achievement %</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>IF(Target_Revenue__c > 0, Actual_Revenue__c / Target_Revenue__c, 0)</formula>
</CustomField>