project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Revenue_Gap__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Gap__c</fullName>
    <label>Revenue Gap</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>Target_Revenue__c - Actual_Revenue__c</formula>
</CustomField>