project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Sales_Man__c.field-meta.xml
<CustomField>
    <fullName>Sales_Man__c</fullName>
    <label>Sales Man</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Mans</relationshipName>
</CustomField>