project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <formula>IF(Revenue_Achievement__c &gt;= 1, "Target Met", "Target Not Met")</formula>
</CustomField>