project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <label>Target Revenue</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>