project/force-app/main/default/objects/Sales_Advertising_Target__c/fields/Time_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Time_Metrics__c</fullName>
    <label>Time Metrics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Calendar Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>